initial style guide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla quidem corrupti aliquam, suscipit eos quasi sapiente voluptate. Explicabo, asperiores dolorum perspiciatis voluptatibus fugit nobis. Ratione blanditiis animi modi alias rem!
+  </p>
   
 </body>
 </html>
